src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationStringAssignFloat.deca
//Description :
//	affectation d'un float à une variable définie comme string
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : type incompatible <10, 6>

{
	String x;
	x = 3.2;
	println(x);
}